  This gave a few more frames per second on Firefox.
* Fixed drawTileSpecific, which wasn't as specific as it should be because it still
  looked at the current map the user is on. It's purpose is actually to draw a specific
  tile of a specific tileset to specific coordinates on the canvas (although it
  still adjusts for tiled "start a tile at the bottom" thing)

--- Friday 2010/07/16 ---

* Implement a debug grid (useful to see where the tiles are being rendered to)
  - The grid does not move. set debugGrid to true to enable it.
    debugGridX and debugGridY are the width and height of a single cell
* Fix the world-animated tiles.
  - Every time a tile was drawn it would count as a frame, but since there can
    be multiple instances of the same tile in a world this caused the framerate
    to to multiply to the ammount of those tiles in view (so if you saw a tile
    3 times, its framerate would have tripled.)
    This has now been fixed, but it seems to cause a slight jitter in FF

Performance:
    - Google Chrome Ubuntu: 9-11ms = 111 fps
    - Firefox 3.6.6 Ubuntu: 35-40ms = 25 fps
    - Firefox 4.0b1 Ubuntu: 30-37ms = 25-29 fps

--- Thursday 2010/07/15 --- 5 files in total: size = 38,4 Kilobytes

* Adding 2 files: kiflea.keyboard.js and kiflea.unpacking.js
  - kiflea.unpacking.js uses a simplified base64 decoding script
    (used to use a jQuery plugin for this)
  - kiflea.keyboard.js stores the onkey events,
    and a handy array filled with keycodes
* Loading of layer properties
* Loading of tile properties
* Loading of animated tiles!
* Drawing character on a specific layer
* Drawing various tilesizes
  32x32 tiles, 256x128 tiles, 32x46, ... can all be mixed together
  A 256x128 tile takes up only 1 32x32 tile on a 32x32 layer. The starting point
  is at the bottom left corner (Which is slightly annoying because <canvas>
  starts at the top left corner, but it's an easy fix)
* Drawing world-animated tiles: