@@ -5,7 +5,7 @@
   <tile id="0">
    <properties>
     <property name="downtile" value="1"/>
-    <property name="fps" value="5"/>
+    <property name="fps" value="10"/>
     <property name="lefttile" value="16"/>
     <property name="movingobject" value="1"/>
     <property name="nextframe" value="2"/>
@@ -35,6 +35,7 @@
   </tile>
   <tile id="5">
    <properties>
+    <property name="fps" value="10"/>
     <property name="movingobject" value="1"/>
     <property name="nextframe" value="7"/>
    </properties>
@@ -61,6 +62,7 @@
   </tile>
   <tile id="10">
    <properties>
+    <property name="fps" value="10"/>
     <property name="nextframe" value="12"/>
    </properties>
   </tile>
@@ -86,6 +88,7 @@
   </tile>
   <tile id="15">
    <properties>
+    <property name="fps" value="10"/>
     <property name="nextframe" value="17"/>
    </properties>
   </tile>
@@ -115,7 +118,7 @@
   <tile id="0">
    <properties>
     <property name="downtile" value="1"/>
-    <property name="fps" value="5"/>
+    <property name="fps" value="10"/>
     <property name="lefttile" value="16"/>
     <property name="movingobject" value="1"/>
     <property name="nextframe" value="2"/>
@@ -145,6 +148,7 @@
   </tile>
   <tile id="5">
    <properties>
+    <property name="fps" value="10"/>
     <property name="movingobject" value="1"/>
     <property name="nextframe" value="7"/>
    </properties>
@@ -171,6 +175,7 @@
   </tile>
   <tile id="10">
    <properties>
+    <property name="fps" value="10"/>
     <property name="nextframe" value="12"/>
    </properties>
   </tile>
@@ -196,6 +201,7 @@
   </tile>
   <tile id="15">
    <properties>
+    <property name="fps" value="10"/>
     <property name="nextframe" value="17"/>
    </properties>
   </tile>
